feat: enhance build process with MOTOR_CONFIG support and update documentation

--- a/main/CMakeLists.txt
+++ b/main/CMakeLists.txt
@@ -11,6 +11,24 @@ idf_component_register(
     # "../managed_components/s00500_ESPUI/src"
 )
 
+# 根据 MOTOR_CONFIG 变量定义相应的宏
+if(DEFINED MOTOR_CONFIG)
+    if(MOTOR_CONFIG STREQUAL "MOTORS_4")
+        target_compile_definitions(${COMPONENT_LIB} PRIVATE MOTORS_4)
+        message(STATUS "Building with MOTORS_4 configuration")
+    elseif(MOTOR_CONFIG STREQUAL "MOTORS_6")
+        target_compile_definitions(${COMPONENT_LIB} PRIVATE MOTORS_6)
+        message(STATUS "Building with MOTORS_6 configuration")
+    elseif(MOTOR_CONFIG STREQUAL "MOTORS_8")
+        # MOTORS_8 不定义任何宏，使用默认配置
+        message(STATUS "Building with MOTORS_8 configuration (default)")
+    else()
+        message(WARNING "Unknown MOTOR_CONFIG value: ${MOTOR_CONFIG}, using default (MOTORS_8)")
+    endif()
+else()
+    # 如果没有指定 MOTOR_CONFIG，使用默认的 MOTORS_8 配置
+    message(STATUS "No MOTOR_CONFIG specified, using default (MOTORS_8)")
+endif()
 
 # 添加自定义目标执行Python脚本
 add_custom_target(
