--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -13,63 +13,50 @@ jobs:
       - name: Checkout code
         uses: actions/checkout@v4
       
-      - name: Set up Python
-        uses: actions/setup-python@v5
-        with:
-          python-version: '3.11'
-      
-      - name: Install ESP-IDF
-        uses: espressif/esp-idf-ci-action@v1
-        with:
-          esp_idf_version: v5.3.2
-          target: esp32c3
-          required_components: ""
-      
       - name: Get tag name
         id: tag
         run: echo "name=${GITHUB_REF#refs/tags/}" >> $GITHUB_OUTPUT
       
       - name: Build MOTORS_4 version
-        run: |
-          # 构建（通过 CMake 变量指定配置）
-          idf.py build -DMOTOR_CONFIG=MOTORS_4
-          
-          # 合并二进制文件
-          python -m esptool --chip esp32c3 merge_bin -o Top-AMS-MOTORS_4.bin \
-            --flash_mode dio --flash_freq 80m --flash_size 4MB \
-            0x0 build/bootloader/bootloader.bin \
-            0x10000 build/Top-AMS.bin \
-            0x8000 build/partition_table/partition-table.bin
-          
-          # 清理构建目录
-          rm -rf build
+        uses: espressif/esp-idf-ci-action@v1
+        with:
+          esp_idf_version: v5.3.2
+          target: esp32c3
+          command: |
+            idf.py build -DMOTOR_CONFIG=MOTORS_4 && \
+            python -m esptool --chip esp32c3 merge_bin -o Top-AMS-MOTORS_4.bin \
+              --flash_mode dio --flash_freq 80m --flash_size 4MB \
+              0x0 build/bootloader/bootloader.bin \
+              0x10000 build/Top-AMS.bin \
+              0x8000 build/partition_table/partition-table.bin && \
+            rm -rf build
       
       - name: Build MOTORS_6 version
-        run: |
-          # 构建（通过 CMake 变量指定配置）
-          idf.py build -DMOTOR_CONFIG=MOTORS_6
-          
-          # 合并二进制文件
-          python -m esptool --chip esp32c3 merge_bin -o Top-AMS-MOTORS_6.bin \
-            --flash_mode dio --flash_freq 80m --flash_size 4MB \
-            0x0 build/bootloader/bootloader.bin \
-            0x10000 build/Top-AMS.bin \
-            0x8000 build/partition_table/partition-table.bin
-          
-          # 清理构建目录
-          rm -rf build
+        uses: espressif/esp-idf-ci-action@v1
+        with:
+          esp_idf_version: v5.3.2
+          target: esp32c3
+          command: |
+            idf.py build -DMOTOR_CONFIG=MOTORS_6 && \
+            python -m esptool --chip esp32c3 merge_bin -o Top-AMS-MOTORS_6.bin \
+              --flash_mode dio --flash_freq 80m --flash_size 4MB \
+              0x0 build/bootloader/bootloader.bin \
+              0x10000 build/Top-AMS.bin \
+              0x8000 build/partition_table/partition-table.bin && \
+            rm -rf build
       
       - name: Build MOTORS_8 version
-        run: |
-          # 构建（通过 CMake 变量指定配置，MOTORS_8 不定义任何宏）
-          idf.py build -DMOTOR_CONFIG=MOTORS_8
-          
-          # 合并二进制文件
-          python -m esptool --chip esp32c3 merge_bin -o Top-AMS-MOTORS_8.bin \
-            --flash_mode dio --flash_freq 80m --flash_size 4MB \
-            0x0 build/bootloader/bootloader.bin \
-            0x10000 build/Top-AMS.bin \
-            0x8000 build/partition_table/partition-table.bin
+        uses: espressif/esp-idf-ci-action@v1
+        with:
+          esp_idf_version: v5.3.2
+          target: esp32c3
+          command: |
+            idf.py build -DMOTOR_CONFIG=MOTORS_8 && \
+            python -m esptool --chip esp32c3 merge_bin -o Top-AMS-MOTORS_8.bin \
+              --flash_mode dio --flash_freq 80m --flash_size 4MB \
+              0x0 build/bootloader/bootloader.bin \
+              0x10000 build/Top-AMS.bin \
+              0x8000 build/partition_table/partition-table.bin
       
       - name: Create Release
         uses: softprops/action-gh-release@v1
